# Files_handle

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  README.md  main.py  pyproject.toml  start.ps1
.kiro/specs/code-style-refactor/: design.md  requirements.md  tasks.md
docs/: Excel2HTML_RAG_Pipeline_Documentation.md
src/app/: __init__.py  handlers.py  main.py  styles.py  ui.py
src/core/: __init__.py  base_converter.py  config.py  models.py  unified_pipeline.py
src/core/excel2html/: __init__.py  chunker.py  converter.py  excel2html_openpyxl.py  excel2html_openpyxl_enhanced.py  excel2html_unstructed.py  html2chunk.py  pipeline.py
src/core/excel2md/: __init__.py  chunker.py  converter.py
src/excel2html/: excel2html_openpyxl.py  excel2html_openpyxl_enhanced.py  excel2html_unstructed.py  html2chunk.py  pipeline.py
tests/: conftest.py
